[project]
name = "NewJack"
version = "0.1.0"
requires-python = ">=3.8, <3.12"
description = "A dialect of Jack, influenced by C++ and Python."
readme = "README.md"
maintainers = [
    {name = "su2u4", email = "Joey23.su@gmail.com"},
]
dependencies = [
    "myst-parser>=3.0.1",
    "sphinx-book-theme>=0.0.39",
    "sphinx-design>=0.5.0",
    "sphinx-tabs>=3.4.7",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-svg2pdfconverter[cairosvg]>=1.2.3",
    "sphinxcontrib-youtube>=1.4.1",
]

[dependency-groups]
dev = [
    "pycallgraph2>=1.1.3",
    "pylint>=3.2.7",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "rich>=13.9.4",
    "sphinx>=7.1.2",
]
