[project]
name = "NewJack"
version = "0.1.0"
requires-python = ">=3.8, <3.12"
description = "A dialect of Jack, influenced by C++ and Python."
readme = "README.md"
maintainers = [
    {name = "su2u4", email = "Joey23.su@gmail.com"},
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pycallgraph2>=1.1.3",
    "pylint>=3.2.7",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "pytest-depends>=1.0.1",
    "pytest-xdist>=3.6.1",
    "rich>=13.9.4",
]

[tool.pytest.ini_options]
addopts = "-n auto --dist loadfile --cov --cov-report=xml --cov-report=html --cov-config=.coveragerc --cov-branch --log-cli-level=DEBUG --capture=fd"
